Fri Sep 08 03:39:14 BST 2006  Olly Betts <olly@survex.com>

	* md5.h,values.h: openbsd needs arpa/inet.h to be included before
	  netinet/in.h.

Wed Sep 06 21:31:33 BST 2006  Olly Betts <olly@survex.com>

	* md5wrap.cc: #include <unistd.h>

Wed Sep 06 18:03:23 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am: Ship values.h.

Wed Sep 06 03:52:27 BST 2006  Olly Betts <olly@survex.com>

	* configfile.cc: Changed my mind - don't allow comments on the end of
	  lines.
	* docs/overview.txt: Document that omega.conf can have comments and
	  blank lines in.

Wed Sep 06 03:46:16 BST 2006  Olly Betts <olly@survex.com>

	* configfile.cc,omega.conf: Fix code which reads omega.conf to be line
	  based as documented rather than the wacky whitespace based scheme
	  that was actually implemented.  Allow "#" comments and blank lines
	  in omega.conf.

Wed Sep 06 01:26:17 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc: If popen() fails, treat it as a read error.

Wed Sep 06 00:49:47 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc: Fix escaping of filenames to cast characters to
	  "unsigned char" so that isalnum() works correctly everywhere.
	  Not a security hole as dangerous characters were still being
	  escaped.

Tue Sep 05 06:49:30 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am: Run htmlparsetest on "make check".

Tue Sep 05 06:46:18 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,htmlparse.cc,htmlparse.h,metaxmlparse.cc,metaxmlparse.h,
	  myhtmlparse.h,omindex.cc,xmlparse.cc,xmlparse.h: Parse the XML from
	  OpenDocument and OpenOffice using new subclasses of HtmlParser.
	  Only extract meta.xml once.

Tue Sep 05 06:45:02 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,htmlparsetest.cc: Add htmlparsetest which tests the
	  MyHtmlParser class.

Tue Sep 05 04:36:46 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc: Note UTF-8 runes for pdfinfo and pdftotext.

Tue Sep 05 04:29:21 BST 2006  Olly Betts <olly@survex.com>
