@@ -1,3 +1,8 @@
+Fri Sep 08 08:01:15 BST 2006  Olly Betts <olly@survex.com>
+
+	* query.cc: Sun C++'s std::count() isn't very "std" -- it has the
+	  wrong prototype!
+
 Fri Sep 08 03:39:14 BST 2006  Olly Betts <olly@survex.com>
 
 	* md5.h,values.h: openbsd needs arpa/inet.h to be included before
